# sage-intacct-mcp

./: .env.example  .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json  test_connection.py
sage_mcp/: client.py  main.py
sage_mcp/tools/: ap.py  ar.py  financials.py  gl.py  reports.py
src/sage_mcp/: client.py  main.py
src/sage_mcp/tools/: ap.py
