[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-intacct-mcp"
version = "0.1.0"
description = "MCP server for Sage Intacct — read, analyse, and pull financial reports"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sage-intacct-mcp = "sage_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["sage_mcp"]
